backend/test/resources/valid/split_to_join.lgf
@nodes
label type ref
0 11 1
1 0 35
2 0 36
3 10 0
4 0 21
5 0 25
6 20 2
7 20 1
@arcs
    condition
0 1 "6b9ac09535885ca55e29dd011e377c0a"
0 2 "SONST"
1 3 ""
3 4 ""
3 5 ""
4 6 ""
5 6 ""
2 7 ""
6 7 ""
@attributes
target 7
