backend/test/resources/invalid/arcs_join_out.lgf
@nodes
label type ref
0 0 19
1 0 21
2 0 34
3 0 25
4 10 0
5 0 27
6 0 33
7 20 2
8 10 0
9 0 35
10 0 36
11 20 1
12 0 37
@arcs
    condition
0 1 ""
3 4 ""
4 5 ""
4 6 ""
1 7 ""
2 7 ""
5 7 ""
6 7 ""
7 8 ""
8 9 ""
8 10 ""
10 11 ""
9 11 ""
11 12 ""
7 11 ""
@attributes
target 12
